<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteY="25dp">

    <CheckBox
        android:id="@+id/mon"
        android:layout_width="119dp"
        android:layout_height="28dp"
        android:layout_marginEnd="249dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/mon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1"
        android:onClick="onCheckboxClicked"/>

    <CheckBox
        android:id="@+id/tue"
        android:layout_width="119dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="249dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/tue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mon"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1"
        android:onClick="onCheckboxClicked"/>

    <CheckBox
        android:id="@+id/wed"
        android:layout_width="119dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="249dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/wed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tue"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1"
        android:onClick="onCheckboxClicked"/>

    <CheckBox
        android:id="@+id/thu"
        android:layout_width="119dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="249dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/thu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wed"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1"
        android:onClick="onCheckboxClicked"/>

    <CheckBox
        android:id="@+id/fri"
        android:layout_width="119dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="249dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/fri"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/thu"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1"
        android:onClick="onCheckboxClicked"/>

    <CheckBox
        android:id="@+id/sat"
        android:layout_width="119dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="249dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/sat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fri"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1"
        android:onClick="onCheckboxClicked"/>

    <CheckBox
        android:id="@+id/sun"
        android:layout_width="119dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="249dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/sun"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sat"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1"
        android:onClick="onCheckboxClicked"/>

</android.support.constraint.ConstraintLayout>
